# orttaai-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-cuda.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  Panel.tsx  main.tsx  types.ts  ui.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/lib/: updater.ts
app/src/views/: About.tsx  Assistant.tsx  Dictate.tsx  Dictionary.tsx  History.tsx  Insights.tsx  Models.tsx  Settings.tsx
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: clipboard.rs  coordinator.rs  error.rs  focus.rs  lib.rs  memory.rs  settings.rs  types.rs
core/src/audio/: cpal_backend.rs  mod.rs
core/src/hotkey/: mod.rs  portal.rs
core/src/injection/: mod.rs  portal.rs
core/src/llm/: mod.rs
core/src/models/: mod.rs
core/src/store/: mod.rs
core/src/transcription/: mod.rs  whisper.rs
core/tests/: dictation.rs  whisper_backend.rs
docs/: architecture.md  gaps.md  performance.md  spike-results.md
