[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/theoyinbooke/orttaai-desktop"
authors = ["Orttaai"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Profile tuned for the whisper.cpp / audio backends (added later behind features).
[profile.release]
opt-level = 3
lto = "thin"
