[package]
name = "orttaai-core"
description = "The write-once cross-platform engine for Orttaai (Linux & Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
directories.workspace = true
rusqlite.workspace = true

# Real platform backends are optional so the default build stays fast and
# OS-agnostic. whisper.cpp (via whisper-rs) is the first wired, in Phase 1.
whisper-rs = { version = "0.16", optional = true }
cpal = { version = "0.17.3", optional = true }
rubato = { version = "0.15", optional = true }
enigo = { version = "0.3.0", optional = true }
global-hotkey = { version = "0.8.0", optional = true }

[features]
default = []
whisper = ["dep:whisper-rs"]
cpal-audio = ["dep:cpal", "dep:rubato"]
injection = ["dep:enigo"]
# windows-sys (target-gated) drives the win32 message pump the hotkey needs.
hotkey = ["dep:global-hotkey", "dep:windows-sys"]

[dev-dependencies]
hound = "3.5"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"], optional = true }
