[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Independent workspace so the heavy Tauri/webview build stays out of the
# core/cli workspace and its fast CI checks.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The write-once engine, with all real backends (whisper, cpal, injection, hotkey).
orttaai-core = { path = "../../core", features = ["full"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Native Wayland typing via the RemoteDesktop portal is Linux-only; Cargo unions
# these features with the base dependency, so Windows builds never pull in ashpd.
[target."cfg(target_os = \"linux\")".dependencies]
orttaai-core = { path = "../../core", features = ["portal"] }

